--- a/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
+++ b/codes/pandass/ResurrenceOfSurgery_apply_quest.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 52,
    "id": "55633918-d037-4c8e-ad91-3432a16ffb31",
    "metadata": {
     "tags": []
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 53,
    "id": "47300bab-d6fb-47c9-be44-1a1584a6b443",
    "metadata": {
     "tags": []
@@ -733,7 +733,7 @@
        "Name: BMI, Length: 1894, dtype: float64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "id": "83f1574d-a012-42c0-a2e7-1b29fd4afb61",
    "metadata": {
     "tags": []
@@ -848,7 +848,7 @@
        "[876 rows x 1 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 55,
    "id": "7edaa883-4d66-45a1-ad53-a80174169171",
    "metadata": {
     "tags": []
@@ -871,7 +871,7 @@
        "<Axes: xlabel='BMI'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -892,10 +892,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "fd9e48cf-c9f0-47a0-b9c7-1e2b37f49446",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\04-02\\AppData\\Local\\Temp\\ipykernel_10852\\3414255278.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df_ROS_BMI['BMI_범주'] = pd.cut(df_ROS_BMI['BMI'], bins=[0, 18.5, 24.9, 29.9, float('inf')],\n"
+     ]
+    }
+   ],
    "source": [
     "df_ROS_BMI['BMI_범주'] = pd.cut(df_ROS_BMI['BMI'], bins=[0, 18.5, 24.9, 29.9, float('inf')],\n",
     "                               labels=['저체중', '정상 체중', '과체중', '비만'])"
@@ -903,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 57,
    "id": "d519262b-6a6e-4cf3-9e24-2832b4b347c7",
    "metadata": {
     "tags": []
@@ -919,7 +934,7 @@
        "Name: BMI_범주, dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 58,
    "id": "93ae266c-b134-4932-9f04-b71fa6c35d20",
    "metadata": {
     "tags": []
@@ -965,7 +980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "id": "311348b2-9883-4208-bcf4-a49e3747f371",
    "metadata": {
     "tags": []
