--- a/codes/DDA/RecurrenceOfSurgery_DDA_quests.ipynb
+++ b/codes/DDA/RecurrenceOfSurgery_DDA_quests.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "970de202-8eec-4a06-bb5b-14f412c9bcf6",
    "metadata": {
     "tags": []
@@ -378,7 +378,7 @@
        "[1894 rows x 52 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "5c3f7ed5-35be-4c1d-9ad6-ce9198b2fb3a",
    "metadata": {
     "tags": []
@@ -469,6 +469,30 @@
    ],
    "source": [
     "df_ROS.info() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e032b482-f1a6-485e-88dd-ec21bb2bc304",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name '수술기법' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m df_ROS\u001b[38;5;241m.\u001b[39mdescribe(\u001b[43m수술기법\u001b[49m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name '수술기법' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df_ROS.describe= [수술기법]"
    ]
   },
   {
