--- a/codes/NLP/healthapp_review_preprocess.ipynb
+++ b/codes/NLP/healthapp_review_preprocess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBPLrzsglHlPJD5goGSHzL",
+      "authorship_tag": "ABX9TyP9fj+sr0NwbMdxVlTWhQg9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2883,6 +2883,18 @@
     {
       "cell_type": "code",
       "source": [
+        "df_review_positive = df_review_positive.dropna()\n",
+        "df_review_negative = df_review_negative.dropna()"
+      ],
+      "metadata": {
+        "id": "ARXASAGClZCd"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "\n",
         "\n",
         "df_review_positive.to_csv('./review_positive.csv')\n",
@@ -2891,7 +2903,7 @@
       "metadata": {
         "id": "LQf9r6LMit01"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -2905,9 +2917,77 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "df_review_negative.info()"
+      ],
+      "metadata": {
+        "id": "JnIV2PiZg3TM",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "66448dbb-dc3e-48c7-c546-21d59e1a8ae7"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 32 entries, 502 to 1976\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column            Non-Null Count  Dtype \n",
+            "---  ------            --------------  ----- \n",
+            " 0   app               32 non-null     object\n",
+            " 1   review            32 non-null     object\n",
+            " 2   rating            32 non-null     int64 \n",
+            " 3   tokenized_review  32 non-null     object\n",
+            " 4   replaced_review   32 non-null     object\n",
+            "dtypes: int64(1), object(4)\n",
+            "memory usage: 1.5+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_review_positive.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ynVASb8mKQM",
+        "outputId": "07508755-afec-4772-a989-638f5dcd4d3d"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 1468 entries, 500 to 1999\n",
+            "Data columns (total 5 columns):\n",
+            " #   Column            Non-Null Count  Dtype \n",
+            "---  ------            --------------  ----- \n",
+            " 0   app               1468 non-null   object\n",
+            " 1   review            1468 non-null   object\n",
+            " 2   rating            1468 non-null   int64 \n",
+            " 3   tokenized_review  1468 non-null   object\n",
+            " 4   replaced_review   1468 non-null   object\n",
+            "dtypes: int64(1), object(4)\n",
+            "memory usage: 68.8+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "JnIV2PiZg3TM"
+        "id": "OLb8V51YmOUb"
       },
       "execution_count": null,
       "outputs": []
