--- a/codes/visuallizations/UsingChart_TypeOfContractChannel.ipynb
+++ b/codes/visuallizations/UsingChart_TypeOfContractChannel.ipynb
@@ -647,7 +647,7 @@
     }
    ],
    "source": [
-    "# 거래 은행 중 상위 7개 확인 (bank column -> 항목 serise-> index 축출 -> list 변환) -> slicing 7\n",
+    "# 거래 은행 중 상위 7개 확인 (bank column -> Pandas 항목 serise-> index 축출 -> Python list 변환) -> slicing 7\n",
     "order_list = df_TOCC['bank'].value_counts().index.to_list()[:7]\n",
     "order_list"
    ]
