--- a/codes/visuallizations/classfications_scatter.ipynb
+++ b/codes/visuallizations/classfications_scatter.ipynb
@@ -106,10 +106,17 @@
     "# 두 클래스 변수를 한 plot에 표현\n",
     "plt.scatter(x=class1_x_value, y=class1_y_value, label='Class One')\n",
     "plt.scatter(x=class2_x_value, y=class2_y_value, label='Class Two')\n",
+    "\n",
+    "# title\n",
     "plt.title('Classfications Plot')\n",
+    "\n",
+    "# label\n",
     "plt.xlabel('X  Axis') #plt.xlabel('x 축')\n",
     "plt.ylabel('Y Axis')\n",
+    "\n",
+    "# legend\n",
     "plt.legend()\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -156,6 +163,10 @@
     }
    ],
    "source": [
+    "# plot 데이터 포인트를 선으로 연결\n",
+    "# 'g': 선 그래프의 색상을 초록색(Green)으로 지정\n",
+    "# 'o': 데이터 포인트를 원(circle) 모양\n",
+    "# '--': 선 스타일 점선 형태\n",
     "plt.plot(class3_x_value, class3_y_value, 'go--')\n",
     "plt.show "
    ]
