--- a/codes/gatheringdatas/mongodb/updatewithpandas.ipynb
+++ b/codes/gatheringdatas/mongodb/updatewithpandas.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "03aa19d5-86ba-43ab-9442-8231ee2159cb",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import pymongo as mg\n",
@@ -15,7 +17,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "9f0a8bb6-820d-4bd3-a3cc-9bf3f189abea",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "client = mg.MongoClient(host='mongodb://localhost:27017')"
@@ -25,7 +29,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "636acf47-89b4-4f99-aa6b-adb65402a13d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "database = client['study_data_analytics']"
@@ -35,7 +41,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "a753d2b1-ca88-4c89-8b8c-265dc6d14849",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "collection = database['collect_update']"
@@ -43,9 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "52eba772-42e0-4b34-8b67-33f88050bda3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "cursor_data = collection.find({})"
@@ -53,9 +63,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "fd1f5834-be05-4f3e-8cf9-2b9281dc4320",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -78,38 +90,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>city</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>65012a4d8c33eba4be7534cd</td>\n",
-       "      <td>Alice</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Seoul</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>65012a4d8c33eba4be7534ce</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Busan</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        _id   name  age   city\n",
-       "0  65012a4d8c33eba4be7534cd  Alice   26  Seoul\n",
-       "1  65012a4d8c33eba4be7534ce    Bob   30  Busan"
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,9 +115,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "0972acf1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -146,41 +142,21 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>age</th>\n",
-       "      <th>city</th>\n",
        "      <th>update</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>65012a4d8c33eba4be7534cd</td>\n",
-       "      <td>Alice</td>\n",
-       "      <td>26</td>\n",
-       "      <td>Seoul</td>\n",
-       "      <td>2023-09-13 04:08:57.801975</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>65012a4d8c33eba4be7534ce</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>30</td>\n",
-       "      <td>Busan</td>\n",
-       "      <td>2023-09-13 04:08:57.801975</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        _id   name  age   city                     update\n",
-       "0  65012a4d8c33eba4be7534cd  Alice   26  Seoul 2023-09-13 04:08:57.801975\n",
-       "1  65012a4d8c33eba4be7534ce    Bob   30  Busan 2023-09-13 04:08:57.801975"
+       "Empty DataFrame\n",
+       "Columns: [update]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,27 +169,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "f8ef6e06",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'_id': {0: ObjectId('65012a4d8c33eba4be7534cd'),\n",
-       "  1: ObjectId('65012a4d8c33eba4be7534ce'),\n",
-       "  2: ObjectId('65012a4d8c33eba4be7534cf')},\n",
-       " 'name': {0: 'Alice', 1: 'Bob', 2: 'Charlie'},\n",
-       " 'age': {0: 26, 1: 30, 2: 35},\n",
-       " 'city': {0: 'Seoul', 1: 'Busan', 2: 'Incheon'},\n",
-       " 'update': {0: Timestamp('2023-09-13 13:03:01.860351'),\n",
-       "  1: Timestamp('2023-09-13 13:03:01.860351'),\n",
-       "  2: Timestamp('2023-09-13 13:03:01.860351')}}"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dict_collect_update' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdict_collect_update\u001b[49m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'dict_collect_update' is not defined"
+     ]
     }
    ],
    "source": [
@@ -222,10 +193,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "cebd11d5",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "documents must be a non-empty list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[9], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m collection_new \u001b[38;5;241m=\u001b[39m database[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcollect_update_new\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[0;32m      2\u001b[0m dict_collect_update \u001b[38;5;241m=\u001b[39m df_collect_update\u001b[38;5;241m.\u001b[39mto_dict(orient\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrecords\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[43mcollection_new\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43minsert_many\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdict_collect_update\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\anaconda3\\Lib\\site-packages\\pymongo\\collection.py:755\u001b[0m, in \u001b[0;36mCollection.insert_many\u001b[1;34m(self, documents, ordered, bypass_document_validation, session)\u001b[0m\n\u001b[0;32m    713\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Insert an iterable of documents.\u001b[39;00m\n\u001b[0;32m    714\u001b[0m \n\u001b[0;32m    715\u001b[0m \u001b[38;5;124;03m  >>> db.test.count_documents({})\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    750\u001b[0m \u001b[38;5;124;03m.. versionadded:: 3.0\u001b[39;00m\n\u001b[0;32m    751\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    752\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(documents, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m    753\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(documents, abc\u001b[38;5;241m.\u001b[39mMapping)\n\u001b[0;32m    754\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m documents):\n\u001b[1;32m--> 755\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdocuments must be a non-empty list\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    756\u001b[0m inserted_ids \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m    757\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mgen\u001b[39m():\n",
+      "\u001b[1;31mTypeError\u001b[0m: documents must be a non-empty list"
+     ]
+    }
+   ],
    "source": [
     "collection_new = database['collect_update_new']\n",
     "dict_collect_update = df_collect_update.to_dict(orient='records')\n",
@@ -234,21 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "id": "7d6481ee",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[ObjectId('65012a4d8c33eba4be7534cd'),\n",
-       " ObjectId('65012a4d8c33eba4be7534ce'),\n",
-       " ObjectId('65012a4d8c33eba4be7534cf')]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'result' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mresult\u001b[49m\u001b[38;5;241m.\u001b[39minserted_ids\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'result' is not defined"
+     ]
     }
    ],
    "source": [
@@ -280,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
